# clamour

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_base  Jenkinsfile  README.md  broadcast_state.csv  debian_deps.txt  docker-compose.yml  dockerfile_base  optitrack.py  plot.py  pyproject.toml  requirements.txt  scpToAllModules.sh  sendTo.sh  testing_strategy.md
anchor_layouts/: mistlab.csv
ansible/: hosts  playbook-run.yml  playbook-setup.yml  playbook.retry  playbook.yml
cognifly_integration/: cognifly_clamour.py
configuration/: asound.conf  check_wifi.sh
configuration/useful/: change_id.py  change_uwb_settings.py  ranging.py  scan.py  ssh-copy.sh  wpa_sup
sound/: flac2csv.py  flac2csv2.py  mth_wav2flac.py
src/: broadcast_state.csv  clamour.py  contextManagedProcess.py  contextManagedQueue.py  contextManagedSocket.py  ekf.py  live_graph.py  logicalClock.py  main.py  messenger.py  mockPozyx.py  optitrack.py  tdmaNode.py
src/clamour/: __init__.py  clamour.py  contextManagedQueue.py  logicalClock.py  messenger.py  runnableProcess.py
src/ekf/: ekf.py  ekfManager.py
src/interfaces/: __init__.py  anchors.csv  anchors.py  neighborhood.py  slotAssignment.py  testcsv.py  timing.py
src/messages/: __init__.py  messageBox.py  messageFactory.py  synchronizationMessage.py  tdmaControlMessage.py  types.py  updateMessage.py  uwbMessage.py
testing/: comm.py  comm_recv.py  postprocessing.py
tests/: main.ut.py  tests.ut.py
to_install_on_rpi/: clamour.service  update_and_start_clamour.sh
useful_scripts/: change_id.py  comm_recv.py  scan.py
(+67 files in other folders)
